# portal

./: .env.example  .gitignore  ACTION_PROMPT_FOR_CODING_AGENT.md  ARTIFACT1_FINAL_CODING_TASKS.md  ARTIFACT2_COMPLETE_TEST_PROMPTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_REVIEW_TASKS.md  CONTRIBUTING.md  DOCS_SYNC_PLAN.md  Dockerfile  KNOWN_ISSUES.md  Makefile  PORTAL_AUDIT_REPORT.md  PORTAL_CODEBASE_REVIEW_AGENT_v3.md  PORTAL_CODEBASE_REVIEW_AGENT_v4.md  PORTAL_CODEBASE_REVIEW_AGENT_v5.md  PORTAL_COMPLETE_HONEST_ASSESSMENT.md  PORTAL_DOCUMENTATION_AGENT.md  PORTAL_FEATURE_COMPLETE_AGENT_PROMPT.md  PORTAL_FINAL_ACTION_v3.md  PORTAL_FINAL_REVIEW_v3.md  PORTAL_FINISH_LINE_ACTION_PROMPT.md  PORTAL_GUI_REVIEW_AND_TASKS.md  PORTAL_HOW_IT_WORKS.md  PORTAL_MODEL_EXPANSION_ACTION.md  PORTAL_OPENWEBUI_SETUP_AGENT.md  PORTAL_POST_IMPL_REVIEW_AND_TASKS.md  PORTAL_POST_IMPL_REVIEW_AND_TASKS_v2.md  PORTAL_ROADMAP.md  PORTAL_TARGETED_FINISH_LINE_v2.md  PROMPTS_IMPORT_AGENT.md  PULL_REQUEST.md  QUICKSTART.md  README.md  ROADMAP.md  TESTING_PROMPTS.md  TEST_PROMPTS.md  VERIFICATION_LOG.md  conftest.py  (+4 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
config/personas/: itexpert.yaml  techreviewer.yaml
deploy/web-ui/librechat/: docker-compose.yml  librechat.yaml
deploy/web-ui/openwebui/: Caddyfile  README.md  SETUP_TOOLS.md  docker-compose.yml
docs/: ACTION_PROMPT_FOR_CODING_AGENT.md  ARCHITECTURE.md  CODE_REVIEW_SUMMARY.md  implementation_plan.md  openapi-chat-completions.yaml
docs/agents/: PORTAL_CODEBASE_REVIEW_AGENT_v6.md  PORTAL_CODEBASE_REVIEW_AGENT_v7.md  PORTAL_DOCUMENTATION_AGENT_v2.md  PORTAL_DOCUMENTATION_AGENT_v3.md  PORTAL_DOCUMENTATION_AGENT_v4.md  dep_audit.py  module_audit.py
docs/archive/: README.md
hardware/linux-bare/: launch.sh  launch_router.sh
hardware/linux-wsl2/: launch.sh  launch_router.sh
hardware/m4-mac/: launch.sh  launch_router.sh  m4-mps.env
imports/: README.md
imports/openwebui/: mcp-servers.json
mcp/core/: mcp_servers.json
mcp/documents/: document_mcp.py
mcp/execution/: code_sandbox_mcp.py  launch_sandbox_mcp.sh
mcp/generation/: comfyui_mcp.py  launch_generation_mcps.sh  music_mcp.py  tts_mcp.py  video_mcp.py  whisper_mcp.py
mcp/scrapling/: launch_scrapling.sh
portal_mcp/documents/: document_mcp.py
portal_mcp/execution/: code_sandbox_mcp.py
portal_mcp/generation/: comfyui_mcp.py  music_mcp.py  tts_mcp.py  video_mcp.py  whisper_mcp.py
scripts/: __init__.py  bootstrap_python.sh  release.py  setup_openwebui.py  test_openai_compat.py
scripts/mcp/: __init__.py  bash_mcp_server.py  web_scrape_mcp_server.py
src/portal/: __init__.py  __main__.py  cli.py  lifecycle.py
src/portal/agent/: __init__.py  dispatcher.py
src/portal/config/: secrets.py  settings.py  validator.py
src/portal/core/: __init__.py  agent_core.py  context_manager.py  db.py  event_broker.py  event_bus.py  exceptions.py  factories.py  job_worker.py  orchestrator.py  prompt_manager.py  structured_logger.py  tool_schema_builder.py  types.py
src/portal/interfaces/: __init__.py  base.py
src/portal/memory/: __init__.py  manager.py
src/portal/middleware/: __init__.py  cost_tracker.py  hitl_approval.py  tool_confirmation_middleware.py
src/portal/observability/: __init__.py  config_watcher.py  health.py  log_rotation.py  metrics.py  runtime_metrics.py  tracer.py  watchdog.py
src/portal/persistence/: __init__.py  inmemory_impl.py  repositories.py  sqlite_impl.py
src/portal/protocols/: __init__.py  resource_resolver.py
src/portal/routing/: __init__.py  backend_registry.py  circuit_breaker.py  default_models.json  execution_engine.py  intelligent_router.py  llm_classifier.py  model_backends.py  model_puller.py  model_registry.py  response_formatter.py  router.py  router_rules.json  task_classifier.py  workspace_registry.py
src/portal/security/: __init__.py  input_sanitizer.py  middleware.py  rate_limiter.py  security_module.py  sqlite_rate_limiter.py
src/portal/tools/: __init__.py
tests/: conftest.py
tests/e2e/: test_cli_commands.py  test_job_queue_system.py  test_observability.py
tests/integration/: test_file_delivery.py  test_interfaces.py  test_mcp.py  test_routing.py  test_tool_loading.py  test_web_interface.py  test_websocket.py
tests/tests/: README.md  __init__.py  conftest.py
tests/tests/e2e/: README.md  test_cli_commands.py  test_job_queue_system.py  test_mcp_protocol.py  test_observability.py
tests/tests/integration/: README.md  test_tool_loading.py
tests/tests/unit/: test_base_tool.py  test_data_integrity.py  test_human_in_loop_middleware.py  test_job_queue.py  test_router.py  test_security.py
tests/unit/: test_agent_core_constants.py  test_agent_core_hitl.py  test_agent_core_orchestrator.py  test_backend_registry.py  test_base_tool.py  test_bash_mcp_hardening.py  test_bootstrap.py  test_build_chat_messages.py  test_circuit_breaker.py  test_config_watcher.py  test_context_manager.py  test_core_init_exports.py  test_data_driven_registry.py  test_data_integrity.py  test_docker_sandbox.py  test_document_metadata_extractor.py  test_dynamic_model_registry.py  test_event_bus.py  test_event_bus_deque.py  test_event_bus_subscribers.py  test_excel_processor.py  test_execution_engine_comprehensive.py  test_file_compressor.py  test_health_checks.py  test_hitl_import_guard.py  test_human_in_loop_middleware.py  test_intelligent_router.py  test_job_queue.py  test_lifecycle.py  test_llm_classifier.py  test_log_rotation.py  test_math_safe_eval.py  test_mcp_context_preservation.py  test_mcp_registration.py  test_mcp_registry.py  test_mcp_tool_loop.py  test_memory_manager.py  test_memory_manager_comprehensive.py  test_metrics.py  test_model_backends.py  (+37 more)
tests/unit/mcp/: test_code_sandbox_mcp.py  test_document_mcp.py  test_sdxl_workflow.py  test_wan22_workflow.py
tests/unit/tools/: __init__.py  test_automation_tools.py  test_data_tools.py  test_docker_tools.py  test_document_tools.py  test_git_tools.py  test_music_generator.py  test_system_tools.py  test_video_generator.py  test_web_and_media_tools.py
(+115 files in other folders)
