[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portal"
version = "1.0.3"
description = "Local-first AI platform. Web-primary. Multi-interface. Hardware-agnostic."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"
dependencies = [
    # Core async
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "aiofiles>=23.2.0",
    "websockets>=12.0",
    # Config + validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    # Security
    "cryptography>=42.0.0",
    "python-multipart>=0.0.9",
    # Observability
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "prometheus-client>=0.20.0",
    # MCP
    "mcp>=1.0.0",
    # Utilities
    "tiktoken>=0.7.0",
    "tenacity>=8.3.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.32.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
telegram = [
    "python-telegram-bot>=21.0,<22.0",
]
slack = [
    "slack-sdk>=3.29.0",
]
generation = [
    "faster-whisper>=1.0.0",
    "pillow>=10.3.0",
    "numexpr>=2.8.0",
]
all = [
    "python-telegram-bot>=21.0,<22.0",
    "slack-sdk>=3.29.0",
    "faster-whisper>=1.0.0",
    "pillow>=10.3.0",
]
dev = [
    "portal[all]",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
portal = "portal.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line-length enforced by formatter, not linter

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
