[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portal"
version = "1.3.4"
description = "Local-first AI platform. Web-primary. Multi-interface. Hardware-agnostic."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    # Core async
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "aiofiles>=23.2.0",
    # Config + validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    # Security
    "python-multipart>=0.0.9",
    # Observability
    "prometheus-client>=0.20.0",
    # Utilities
    "click>=8.1.7",
]

[project.optional-dependencies]
telegram = [
    "python-telegram-bot>=21.0,<22.0",
]
slack = [
    "slack-sdk>=3.29.0",
]
generation = [
    "faster-whisper>=1.0.0",
    "pillow>=10.3.0",
]
redis = [
    "redis>=5.0.0",
]
all = [
    "python-telegram-bot>=21.0,<22.0",
    "slack-sdk>=3.29.0",
    "faster-whisper>=1.0.0",
    "pillow>=10.3.0",
    "redis>=5.0.0",
]
dev = [
    "portal[all]",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "GitPython>=3.1.0",
    "docker>=7.0.0",
    "psutil>=5.9.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "qrcode[pil]>=7.4.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "pypdf>=4.0.0",
    "xmltodict>=0.13.0",
    "toml>=0.10.2",
]

[project.scripts]
portal = "portal.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not e2e and not integration'"
markers = [
    "e2e: end-to-end tests that require a fully running portal stack (deselect with '-m not e2e')",
    "integration: integration tests that may require external services",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line-length enforced by formatter, not linter

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
